--- a/task4/requirements.txt
+++ b/task4/requirements.txt
@@ -1,6 +1,5 @@
-pandas
-pyyaml
-pyarrow
-streamlit
-matplotlib
-Pillow
+pandas>=1.5.0
+plotly>=5.0.0
+pyyaml>=6.0
+pyarrow>=10.0.0
+streamlit>=1.28.0
